experiments for github pages

--- a/ai_quiz/src/App.css
+++ b/ai_quiz/src/App.css
@@ -77,7 +77,7 @@ body {
 }
 
 .answer-rectangle.selected {
-  background-color: #2996be;
+  background-color: #4EABC8
 }
 
 .answer-rectangle.correct {
