--- a/src/App.css
+++ b/src/App.css
@@ -6,39 +6,37 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
-  background-image: url('/Users/alicjaziewiec/Desktop/Repos/ai_quiz/public/ai_background.png');
+  background-image: url("/Users/alicjaziewiec/Desktop/Repos/ai_quiz/public/ai_background.png");
   background-size: cover; /* Dopasowanie obrazka do rozmiaru ekranu */
   background-repeat: no-repeat; /* Wyłączenie powtarzania obrazka */
   background-attachment: fixed; /* Stałe tło, które nie przewija się z treścią strony */
 }
 
-/* Nagłówek strony */
 .header {
   font-size: 40px;
   font-weight: bold;
   text-align: center;
-  color: #E8FDFF;
+  color: #e8fdff;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
-/* Napis "QUIZ" */
 .quiz-title {
   font-size: 40px;
   font-weight: bold;
   text-align: center;
   margin-top: 20px;
-  color: #E8FDFF;
+  color: #e8fdff;
+  margin-bottom: 60px;
 }
 
-/* Pytanie */
 .question {
   font-size: 24px;
   margin-top: 20px;
+  margin-bottom: 40px;
   font-weight: bold;
   color: #213743;
 }
 
-/* Style dla odpowiedzi */
 .answer-list {
   list-style-type: none;
   padding: 0;
@@ -49,16 +47,18 @@ body {
   margin-top: 10px;
 }
 
-/* Kontener pytania i odpowiedzi */
 .question-container {
-  background-color: rgba(255, 255, 255, 0.6); /* Białe tło z przeźroczystością */
-  padding: 20px; /* Margines 20 pikseli */
-  border-radius: 10px; /* Zaokrąglenie rogów */
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 20px;
+  border-radius: 10px;
+  margin-left: 100px;
+  margin-right: 100px;
+  /* width: 1300px; */
 }
 
 .answer-label {
   display: flex;
-  align-items: center; /* Wyśrodkowanie elementów w pionie */
+  align-items: center;
   margin-bottom: 10px;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
@@ -67,17 +67,17 @@ body {
 .answer-rectangle {
   flex: 1; /* Rozciągnięcie prostokąta, aby zająć dostępną przestrzeń */
   background-color: #213743;
-  color: #E8FDFF;
+  color: #e8fdff;
   padding: 10px;
   border-radius: 10px;
 }
 
 .answer-rectangle:hover {
-  background-color: #306E84
+  background-color: #306e84;
 }
 
 .answer-rectangle.selected {
-  background-color: #4EABC8
+  background-color: #4eabc8;
 }
 
 .answer-rectangle.correct {
@@ -90,8 +90,7 @@ body {
 
 .button-check-answer {
   font-size: 24px;
-  margin-top: 20px;
-  background-color: #FAC164;
+  background-color: #fac164;
   color: #213743;
   padding: 10px;
   border-radius: 10px;
@@ -100,6 +99,17 @@ body {
   transition: background-color 0.2s ease-in-out;
   text-align: center;
   font-weight: bold;
+  margin-top: 40px;
+}
+
+.button-next-question {
+  margin-top: 24px;
+  width: 100%;
+}
+
+.button-restart-quiz {
+  margin-top: 24px;
+  width: 100%;
 }
 
 .button-check-answer:hover {
@@ -109,8 +119,7 @@ body {
 .score {
   text-align: center;
   margin-top: 90px;
-  color: #E8FDFF;
+  color: #e8fdff;
   font-size: 24px;
   font-weight: bold;
 }
-
